--- a/EntregaMC5/mini_challenge_5.ipynb
+++ b/EntregaMC5/mini_challenge_5.ipynb
@@ -13,35 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/workspaces/programacion-EIA/EntregaMC5/paquete_MC5/polinomios.py:66: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  alp = cb((-1.0*q/2) + sq(dsc))\n",
-      "/workspaces/programacion-EIA/EntregaMC5/paquete_MC5/polinomios.py:67: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  bt_1 = cb((-1.0*q/2) - sq(dsc))\n",
-      "/workspaces/programacion-EIA/EntregaMC5/paquete_MC5/polinomios.py:68: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  w_1 = (-1/2) + sq(-3)/2\n",
-      "/workspaces/programacion-EIA/EntregaMC5/paquete_MC5/polinomios.py:69: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  w_2 = (-1/2) - sq(-3)/2\n"
+      "[(5.2803696782307+0j), (-4.397532854141501-2.220446049250313e-16j), (-0.8828368240891995-4.440892098500626e-16j)]\n"
      ]
     }
    ],
    "source": [
     "import paquete_MC5.polinomios as p\n",
     " \n",
-    "print(p.raices(-2,-5,12,3))"
+    "print(p.raices(-1,6,12,5))"
    ]
   },
   {
