--- a/EntregaMC5/mini_challenge_5.ipynb
+++ b/EntregaMC5/mini_challenge_5.ipynb
@@ -32,21 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2+2j)\n"
+      "None\n"
      ]
     }
    ],
    "source": [
-    "import numpy\n",
-    "a = numpy.sqrt(8j)\n",
-    "print(a)"
+    "import paquete_MC5.unidades as u\n",
+    "print(u.newton_kilopondio(\"Kp\",25.5))"
    ]
   }
  ],
