Grafico CM primera practica

--- a/Parcial/parcial.ipynb
+++ b/Parcial/parcial.ipynb
@@ -15,18 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'str' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[35], line 40\u001b[0m\n\u001b[0;32m     37\u001b[0m     lista\u001b[39m.\u001b[39mappend(aux2)\n\u001b[0;32m     39\u001b[0m media,mediana\u001b[39m=\u001b[39mme(lista,num\u001b[39m=\u001b[39mtamaño)\n\u001b[1;32m---> 40\u001b[0m \u001b[39mprint\u001b[39;49m(media)\n\u001b[0;32m     41\u001b[0m \u001b[39mprint\u001b[39m\u001b[39m=\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mla media es de\u001b[39m\u001b[39m{\u001b[39;00mmedia\u001b[39m:\u001b[39;00m\u001b[39m2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m y la mediana es de\u001b[39m\u001b[39m{\u001b[39;00mmediana\u001b[39m:\u001b[39;00m\u001b[39m2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'str' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.0, 2.0, 3.0, 4.0, 5.0]]\n",
+      "2\n",
+      "la media es de3.00 y la mediana es de3.00\n"
      ]
     }
    ],
@@ -40,15 +38,14 @@
     "    for idx3 in range(len(args)):\n",
     "        aux=args[idx3]\n",
     "        listaux.append(aux)\n",
-    "    \n",
-    "    for idx in range(len(args)):\n",
-    "        aux=listaux[0][idx]\n",
-    "        cnt= cnt + aux\n",
     "\n",
+    "    for idx in range(len(listaux[0])):\n",
+    "        aux=listaux[0][idx]\n",
+    "        cnt= cnt + listaux[0][idx]\n",
     "    media=cnt/num\n",
     "\n",
-    "    for idx1 in range(len(args)):\n",
-    "        for idx2 in range(len(args)):\n",
+    "    for idx1 in range(len(listaux[0])):\n",
+    "        for idx2 in range(len(listaux[0])):\n",
     "            if listaux[0][idx1]<=listaux[0][idx2]:\n",
     "                aux=listaux[0][idx1]\n",
     "                listaux[0][idx1]=listaux[0][idx2]\n",
@@ -57,7 +54,7 @@
     "        aux=num/2\n",
     "        mediana=(listaux[0][aux]+listaux[0][aux+1])/2\n",
     "    else:\n",
-    "        aux=int(((num-1)/2)+1)\n",
+    "        aux=int(((num-1)/2))\n",
     "        mediana=listaux[0][aux]\n",
     "    \n",
     "    return media,mediana\n",
@@ -70,14 +67,92 @@
     "    lista.append(aux2)\n",
     "\n",
     "media,mediana=me(lista,num=tamaño)\n",
-    "print(media)\n",
-    "print=(f\"la media es de{media:2f} y la mediana es de{mediana:2f}\")\n"
+    "\n",
+    "print(f\"la media es de{media:.2f} y la mediana es de{mediana:.2f}\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Escriba la función punto_medio(p1, p2) que reciba como argumentos las coordenadas del punto p1 (x1, y1) y el punto p2 (x2, y2) y calcule e imprima la distancia euclidiana entre los dos puntos y la ubicación del punto medio con coordenadas (x0, y0). Note que las coordenadas son tuplas.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distancia entre p1 y p2: 5.00\n",
+      "Punto medio: [2.0, 1.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "def punto(*args):\n",
+    "    x=args[0][0]-args[1][0]\n",
+    "    x = np.abs(x)\n",
+    "    y=args[0][1]-args[1][1]\n",
+    "    y=abs(y)\n",
+    "    listaaux=[]\n",
+    "    aux=x**2 + y**2\n",
+    "    distancia=float(np.sqrt(aux))\n",
+    "    aux2=x/2\n",
+    "    listaaux.append(aux2)\n",
+    "    aux3=y/2\n",
+    "    listaaux.append(aux3)\n",
+    "    return distancia,listaaux\n",
+    "distancia,pmedio=punto((0,2),(4,5))\n",
+    "print(f\"Distancia entre p1 y p2: {distancia:.2f}\\nPunto medio: {pmedio}\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Escriba la función pascal(n) que calcule e imprima las n filas del triángulo de Pascal, donde n es un número entero tal que n = 1, 2, ..., 9. La función puede recibir números de punto flotante, pero se debe hacer conversión al entero más cercano. Adicionalmente se debe validar que el número ingresado esté entre 1 y 9, en caso de ser un número mayor o igual a 10, debe imprimir un mensaje informando esta restricción; en caso de ser un número negativo, se debe imprimir un mensaje de error."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[1, 3, 3, 1]\n",
+      "[1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pascal(a):\n",
+    "    a=int(a)\n",
+    "    lista=[[1],[1,1],[1,2,1],[1,3,3,1],[1,4,6,4,1],[1,5,10,10,5,1],[1,6,15,20,15,6,1],[1,7,21,35,35,21,7,1],[1,8,28,56,70,56,28,8,9]]\n",
+    "    limite=(len(lista))\n",
+    "    \n",
+    "    for idx in (0,a,1):\n",
+    "        listaux=[]\n",
+    "        for idx2 in range(len(lista[idx])):\n",
+    "            listaux.append(lista[idx][idx2])\n",
+    "        print(listaux)\n",
+    "pascal(3)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -91,12 +166,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "58837b1b657ea91009af8409fc244ae3b5ccf93ea980d6fb6b80adc5f697f4cc"
+    "hash": "c28da407b5413b3940d87ecdae5ea8ce0c2929d84f560e9f5daaaa2573d53e68"
    }
   }
  },
