termino mini challenge 7

--- a/mini_challenge#7.ipynb
+++ b/mini_challenge#7.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,26 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[10. 10. 10. 10. 10. 10. 10. 10. 10. 10.]\n",
-      " [10.  0.  0.  0.  0.  0.  0.  0.  0. 10.]\n",
-      " [10.  0.  0.  0.  0.  0.  0.  0.  0. 10.]\n",
-      " [10.  0.  0.  0.  0.  0.  0.  0.  0. 10.]\n",
-      " [10.  0.  0.  0.  0.  0.  0.  0.  0. 10.]\n",
-      " [10.  0.  0.  0.  0.  0.  0.  0.  0. 10.]\n",
-      " [10.  0.  0.  0.  0.  0.  0.  0.  0. 10.]\n",
-      " [10.  0.  0.  0.  0.  0.  0.  0.  0. 10.]\n",
-      " [10.  0.  0.  0.  0.  0.  0.  0.  0. 10.]\n",
-      " [10. 10. 10. 10. 10. 10. 10. 10. 10. 10.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#pido al usuario el valor que quiere meter dentro de la matriz y la inicializo\n",
     "N_2 = int(input('ingrese el numero que quiere ver dentro de la matriz'))\n",
@@ -95,11 +78,59 @@
     "\n",
     "print(Z_2)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Escriba un programa que calcule un promedio ponderado de 15 números. Para esto deberá crear dos arreglos, `valores` en el que se especifican los números a ponderar y `pesos` en el que se especifica la importancia de cada número. Tenga en cuenta que para el cáalculo, `pesos` debe estar normalizado, es decir, la suma de todos sus elementos es 1. Por ejemplo, si los valores a ponderar son notas, es decir, se desea calcular promedio crédito, `pesos` tiene la información de los créditos asociados a cada nota y se divide por el total de créditos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el promedio ponderado es de:\n",
+      "3.80\n"
+     ]
+    }
+   ],
+   "source": [
+    "#inicializo mis variables auxiliares y arreglos\n",
+    "valores=np.empty((15))\n",
+    "pesos=np.empty((15))\n",
+    "aux1=0\n",
+    "aux2=0\n",
+    "\n",
+    "#ciclo for para poder inicializar mis arreglos\n",
+    "for idx in range(len(valores)):\n",
+    "    valores[idx] = float((input(\"escriba el valor a ponderar\")))\n",
+    "    pesos[idx]= float(input(\"escriba la importancia de dicho valor\"))\n",
+    "    \n",
+    "\n",
+    "#normalizo mi vector pesos\n",
+    "for idx2 in pesos:\n",
+    "    aux1+=idx2\n",
+    "pesos = pesos/aux1\n",
+    "    \n",
+    "#calculo el promedio poderado y lo muestro en pantalla\n",
+    "promedio = valores*pesos\n",
+    "for idx in range(len(promedio)):\n",
+    "    aux2+=promedio[idx]\n",
+    "\n",
+    "print(f\"el promedio ponderado es de:\\n{aux2:.2f}\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -113,12 +144,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "58837b1b657ea91009af8409fc244ae3b5ccf93ea980d6fb6b80adc5f697f4cc"
+    "hash": "c28da407b5413b3940d87ecdae5ea8ce0c2929d84f560e9f5daaaa2573d53e68"
    }
   }
  },
