--- a/Trabajo FInal/maze_solver_robot.ipynb
+++ b/Trabajo FInal/maze_solver_robot.ipynb
@@ -24,29 +24,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 1. 2. 3. 4.]]\n",
-      "4.0\n"
+      "[[[0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 1. 2. 3. 4.]]\n",
+      "\n",
+      " [[0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]]\n",
+      "\n",
+      " [[0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]]\n",
+      "\n",
+      " [[0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]]\n",
+      "\n",
+      " [[0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]]]\n"
      ]
     }
    ],
    "source": [
-    "flood_fill = np.zeros((4,5,5))\n",
+    "flood_fill = np.zeros((5,5,5))\n",
     "\n",
     "for idx in range(0,5,1):\n",
     "    flood_fill[0][4][idx]=idx\n",
-    "print(flood_fill[0])\n",
-    "print(flood_fill[0][4][4])"
+    "print(flood_fill)"
    ]
   }
  ],
