defino la estructura de mi laberinto

--- a/Trabajo FInal/maze_solver_robot.ipynb
+++ b/Trabajo FInal/maze_solver_robot.ipynb
@@ -15,60 +15,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]\n",
-      "  [0. 1. 2. 3. 4.]]\n",
+      "[[[0. 0. 0. 0. 1.]\n",
+      "  [0. 0. 0. 0. 1.]\n",
+      "  [0. 0. 0. 0. 1.]\n",
+      "  [0. 0. 0. 0. 1.]\n",
+      "  [0. 0. 0. 0. 1.]]\n",
       "\n",
-      " [[0. 0. 0. 0. 0.]\n",
+      " [[1. 1. 1. 1. 1.]\n",
       "  [0. 0. 0. 0. 0.]\n",
       "  [0. 0. 0. 0. 0.]\n",
       "  [0. 0. 0. 0. 0.]\n",
       "  [0. 0. 0. 0. 0.]]\n",
       "\n",
-      " [[0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]]\n",
+      " [[1. 0. 0. 1. 0.]\n",
+      "  [1. 0. 1. 0. 1.]\n",
+      "  [1. 1. 1. 0. 0.]\n",
+      "  [1. 1. 0. 0. 1.]\n",
+      "  [1. 1. 0. 0. 0.]]\n",
       "\n",
-      " [[0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]]]\n"
+      " [[1. 0. 0. 1. 0.]\n",
+      "  [0. 1. 1. 0. 0.]\n",
+      "  [0. 0. 1. 1. 0.]\n",
+      "  [0. 0. 1. 1. 0.]\n",
+      "  [1. 1. 1. 1. 1.]]]\n"
      ]
     }
    ],
    "source": [
     "flood_fill = np.zeros((5,5,5))\n",
+    "aux_unos = 1.0\n",
+    "x = 1\n",
+    "\n",
+    "#delimito las fronteras de mi laberinto\n",
+    "for idx in range(0,5,1):\n",
+    "    flood_fill[1][idx][4]=aux_unos\n",
+    "    flood_fill[3][idx][0]=aux_unos\n",
+    "    flood_fill[2][0]=aux_unos\n",
+    "    flood_fill[4][4]=aux_unos\n",
+    "\n",
+    "#Configuro las paredes de adentro de mi laberinto\n",
+    "for idx in range(0,5,1):\n",
+    "    flood_fill[1][idx][4]=aux_unos\n",
+    "    flood_fill[3][idx][0]=aux_unos\n",
     "\n",
     "for idx in range(0,5,1):\n",
-    "    flood_fill[0][4][idx]=idx\n",
-    "print(flood_fill)"
+    "    flood_fill[2][0]=aux_unos\n",
+    "    flood_fill[4][4]=aux_unos\n",
+    "\n",
+    "while x == 1:\n",
+    "    matriz = int(input(\"ingrese la matriz a editar\"))\n",
+    "    fila = int(input(\"ingrese que fila de dicha matriz quiere editar\"))\n",
+    "    columna = int(input(\"ingrese la columna de dicha matriz quiere editar\"))\n",
+    "    \n",
+    "    flood_fill[matriz][fila][columna] = 1\n",
+    "\n",
+    "    x = int(input(\"1 para seguir agregando muros, 0 para terminar\"))\n",
+    "\n",
+    "print(flood_fill[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2]\n",
+      "[[0.81461714 0.5814532  0.09633817]\n",
+      " [0.7296421  0.58893934 0.2261124 ]]\n",
+      "[[0.         1.         2.        ]\n",
+      " [0.7296421  0.58893934 0.2261124 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.random.random((2,3))\n",
+    "y = np.arange(3)\n",
+    "\n",
+    "print(y)\n",
+    "print(x)\n",
+    "\n",
+    "x[0]=y\n",
+    "\n",
+    "print(x)"
    ]
   }
  ],
