--- a/Trabajo FInal/maze_solver_robot.ipynb
+++ b/Trabajo FInal/maze_solver_robot.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,36 +25,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Internal Python error in the inspect module.\n",
+      "Below is the traceback from this internal error.\n",
+      "\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0. 0. 0. 0. 1.]\n",
-      "  [0. 0. 0. 0. 1.]\n",
-      "  [0. 0. 0. 0. 1.]\n",
-      "  [0. 0. 0. 0. 1.]\n",
-      "  [0. 0. 0. 0. 1.]]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Acer\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3457, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"C:\\Users\\Acer\\AppData\\Local\\Temp\\ipykernel_12516\\3715526757.py\", line 1, in <module>\n",
+      "    flood_fill = np.zeros((5,5,5))\n",
+      "NameError: name 'np' is not defined\n",
       "\n",
-      " [[1. 1. 1. 1. 1.]\n",
-      "  [0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0. 0.]]\n",
+      "During handling of the above exception, another exception occurred:\n",
       "\n",
-      " [[1. 0. 0. 1. 0.]\n",
-      "  [1. 0. 1. 0. 1.]\n",
-      "  [1. 1. 1. 0. 0.]\n",
-      "  [1. 1. 0. 0. 1.]\n",
-      "  [1. 1. 0. 0. 0.]]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Acer\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2077, in showtraceback\n",
+      "    stb = value._render_traceback_()\n",
+      "AttributeError: 'NameError' object has no attribute '_render_traceback_'\n",
       "\n",
-      " [[1. 0. 0. 1. 0.]\n",
-      "  [0. 1. 1. 0. 0.]\n",
-      "  [0. 0. 1. 1. 0.]\n",
-      "  [0. 0. 1. 1. 0.]\n",
-      "  [1. 1. 1. 1. 1.]]]\n"
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Acer\\anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1101, in get_records\n",
+      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
+      "  File \"c:\\Users\\Acer\\anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 248, in wrapped\n",
+      "    return f(*args, **kwargs)\n",
+      "  File \"c:\\Users\\Acer\\anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 281, in _fixed_getinnerframes\n",
+      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
+      "  File \"c:\\Users\\Acer\\anaconda3\\lib\\inspect.py\", line 1543, in getinnerframes\n",
+      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
+      "  File \"c:\\Users\\Acer\\anaconda3\\lib\\inspect.py\", line 1501, in getframeinfo\n",
+      "    filename = getsourcefile(frame) or getfile(frame)\n",
+      "  File \"c:\\Users\\Acer\\anaconda3\\lib\\inspect.py\", line 709, in getsourcefile\n",
+      "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
+      "  File \"c:\\Users\\Acer\\anaconda3\\lib\\inspect.py\", line 755, in getmodule\n",
+      "    os.path.realpath(f)] = module.__name__\n",
+      "  File \"c:\\Users\\Acer\\anaconda3\\lib\\ntpath.py\", line 664, in realpath\n",
+      "    if _getfinalpathname(spath) == path:\n",
+      "KeyboardInterrupt\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'NoneType' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "    \u001b[1;31m[... skipping hidden 1 frame]\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12516\\3715526757.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mflood_fill\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0maux_unos\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1.0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Acer\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py\u001b[0m in \u001b[0;36mshowtraceback\u001b[1;34m(self, exc_tuple, filename, tb_offset, exception_only, running_compiled_code)\u001b[0m\n\u001b[0;32m   2076\u001b[0m                         \u001b[1;31m# in the engines. This should return a list of strings.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2077\u001b[1;33m                         \u001b[0mstb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_render_traceback_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2078\u001b[0m                     \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NameError' object has no attribute '_render_traceback_'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "    \u001b[1;31m[... skipping hidden 1 frame]\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\Acer\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py\u001b[0m in \u001b[0;36mshowtraceback\u001b[1;34m(self, exc_tuple, filename, tb_offset, exception_only, running_compiled_code)\u001b[0m\n\u001b[0;32m   2077\u001b[0m                         \u001b[0mstb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_render_traceback_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2078\u001b[0m                     \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2079\u001b[1;33m                         stb = self.InteractiveTB.structured_traceback(etype,\n\u001b[0m\u001b[0;32m   2080\u001b[0m                                             value, tb, tb_offset=tb_offset)\n\u001b[0;32m   2081\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\Acer\\anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\u001b[0m in \u001b[0;36mstructured_traceback\u001b[1;34m(self, etype, value, tb, tb_offset, number_of_lines_of_context)\u001b[0m\n\u001b[0;32m   1365\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1366\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1367\u001b[1;33m         return FormattedTB.structured_traceback(\n\u001b[0m\u001b[0;32m   1368\u001b[0m             self, etype, value, tb, tb_offset, number_of_lines_of_context)\n\u001b[0;32m   1369\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\Acer\\anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\u001b[0m in \u001b[0;36mstructured_traceback\u001b[1;34m(self, etype, value, tb, tb_offset, number_of_lines_of_context)\u001b[0m\n\u001b[0;32m   1265\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmode\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mverbose_modes\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1266\u001b[0m             \u001b[1;31m# Verbose modes need a full traceback\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1267\u001b[1;33m             return VerboseTB.structured_traceback(\n\u001b[0m\u001b[0;32m   1268\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0metype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtb\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtb_offset\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnumber_of_lines_of_context\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1269\u001b[0m             )\n",
+      "\u001b[1;32mc:\\Users\\Acer\\anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\u001b[0m in \u001b[0;36mstructured_traceback\u001b[1;34m(self, etype, evalue, etb, tb_offset, number_of_lines_of_context)\u001b[0m\n\u001b[0;32m   1122\u001b[0m         \u001b[1;34m\"\"\"Return a nice text document describing the traceback.\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1123\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1124\u001b[1;33m         formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n\u001b[0m\u001b[0;32m   1125\u001b[0m                                                                tb_offset)\n\u001b[0;32m   1126\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\Acer\\anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\u001b[0m in \u001b[0;36mformat_exception_as_a_whole\u001b[1;34m(self, etype, evalue, etb, number_of_lines_of_context, tb_offset)\u001b[0m\n\u001b[0;32m   1080\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1081\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1082\u001b[1;33m         \u001b[0mlast_unique\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecursion_repeat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfind_recursion\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0morig_etype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mevalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecords\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1083\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1084\u001b[0m         \u001b[0mframes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat_records\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrecords\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlast_unique\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecursion_repeat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\Acer\\anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\u001b[0m in \u001b[0;36mfind_recursion\u001b[1;34m(etype, value, records)\u001b[0m\n\u001b[0;32m    380\u001b[0m     \u001b[1;31m# first frame (from in to out) that looks different.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    381\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mis_recursion_error\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0metype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecords\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 382\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrecords\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    383\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    384\u001b[0m     \u001b[1;31m# Select filename, lineno, func_name to track frames with\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: object of type 'NoneType' has no len()"
      ]
     }
    ],
@@ -63,67 +109,50 @@
     "aux_unos = 1.0\n",
     "x = 1\n",
     "\n",
-    "#delimito las fronteras de mi laberinto\n",
-    "for idx in range(0,5,1):\n",
-    "    flood_fill[1][idx][4]=aux_unos\n",
-    "    flood_fill[3][idx][0]=aux_unos\n",
-    "    flood_fill[2][0]=aux_unos\n",
-    "    flood_fill[4][4]=aux_unos\n",
-    "\n",
-    "#Configuro las paredes de adentro de mi laberinto\n",
-    "for idx in range(0,5,1):\n",
-    "    flood_fill[1][idx][4]=aux_unos\n",
-    "    flood_fill[3][idx][0]=aux_unos\n",
-    "\n",
-    "for idx in range(0,5,1):\n",
-    "    flood_fill[2][0]=aux_unos\n",
-    "    flood_fill[4][4]=aux_unos\n",
-    "\n",
-    "while x == 1:\n",
-    "    matriz = int(input(\"ingrese la matriz a editar\"))\n",
-    "    fila = int(input(\"ingrese que fila de dicha matriz quiere editar\"))\n",
-    "    columna = int(input(\"ingrese la columna de dicha matriz quiere editar\"))\n",
-    "    \n",
-    "    flood_fill[matriz][fila][columna] = 1\n",
-    "\n",
-    "    x = int(input(\"1 para seguir agregando muros, 0 para terminar\"))\n",
+    "#delimito las paredes de mi laberinto y los valores de cada celda\n",
+    "with open('archivos_csv/posiciones.csv','r') as csv_file:\n",
+    "    flood_fill[0] = np.loadtxt(csv_file,delimiter=\";\")\n",
+    "with open('archivos_csv/este.csv','r') as csv_file2:\n",
+    "    flood_fill[1] = np.loadtxt(csv_file2,delimiter=\";\")\n",
+    "with open('archivo_csv/norte.csv','r') as csv_file3:\n",
+    "    flood_fill[2] = np.loadtxt(csv_file3,\";\")\n",
+    "with open('archuvo_csv/oeste.csv','r') as csv_file4:\n",
+    "    flood_fill[3] = np.loadtxt(csv_file4,delimiter=\";\")\n",
+    "with open('archivo_csv/sur.csv','r') as csv_file5:\n",
+    "    flood_fill[4] = np.loadtxt(csv_file5,delimiter=\";\")\n",
     "\n",
     "print(flood_fill[1:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 2]\n",
-      "[[0.81461714 0.5814532  0.09633817]\n",
-      " [0.7296421  0.58893934 0.2261124 ]]\n",
-      "[[0.         1.         2.        ]\n",
-      " [0.7296421  0.58893934 0.2261124 ]]\n"
+      "[[ 6.  5.  4.  5.  4.]\n",
+      " [ 7.  6.  3.  2.  3.]\n",
+      " [ 8.  9.  0.  1.  2.]\n",
+      " [ 9.  8.  9. 10.  3.]\n",
+      " [10.  7.  6.  5.  4.]]\n"
      ]
     }
    ],
    "source": [
-    "x = np.random.random((2,3))\n",
-    "y = np.arange(3)\n",
     "\n",
-    "print(y)\n",
-    "print(x)\n",
-    "\n",
-    "x[0]=y\n",
-    "\n",
-    "print(x)"
+    "flood_fill = np.zeros((5,5,5))\n",
+    "with open('archivos_csv/posiciones.csv','r') as csv_file:\n",
+    "    csv_reader = np.loadtxt(csv_file,delimiter=\";\")\n",
+    "    print(csv_reader)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -137,12 +166,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "58837b1b657ea91009af8409fc244ae3b5ccf93ea980d6fb6b80adc5f697f4cc"
+    "hash": "c28da407b5413b3940d87ecdae5ea8ce0c2929d84f560e9f5daaaa2573d53e68"
    }
   }
  },
