--- a/Trabajo FInal/maze_solver_robot.ipynb
+++ b/Trabajo FInal/maze_solver_robot.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,42 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "[[ 6.  5.  4.  5.  4.]\n",
-      " [ 7.  6.  3.  2.  3.]\n",
-      " [ 8.  9.  0.  1.  2.]\n",
-      " [ 9.  8.  9. 10.  3.]\n",
-      " [10.  7.  6.  5.  4.]]\n",
-      "[[[0. 0. 1. 0. 1.]\n",
-      "  [0. 1. 0. 1. 1.]\n",
-      "  [1. 1. 0. 0. 1.]\n",
-      "  [1. 0. 0. 1. 1.]\n",
-      "  [1. 0. 0. 0. 1.]]\n",
-      "\n",
-      " [[1. 1. 1. 1. 1.]\n",
-      "  [1. 0. 0. 1. 0.]\n",
-      "  [0. 1. 1. 0. 0.]\n",
-      "  [0. 0. 1. 1. 0.]\n",
-      "  [0. 0. 1. 1. 0.]]\n",
-      "\n",
-      " [[1. 0. 0. 1. 0.]\n",
-      "  [1. 0. 1. 0. 1.]\n",
-      "  [1. 1. 1. 0. 0.]\n",
-      "  [1. 1. 0. 0. 1.]\n",
-      "  [1. 1. 0. 0. 0.]]\n",
-      "\n",
-      " [[1. 0. 0. 1. 0.]\n",
-      "  [0. 1. 1. 0. 0.]\n",
-      "  [0. 0. 1. 1. 0.]\n",
-      "  [0. 0. 1. 1. 0.]\n",
-      "  [1. 1. 1. 1. 1.]]]\n"
+      "0.0\n",
+      "hoal2\n",
+      "2.0\n",
+      "2.0\n"
      ]
     }
    ],
@@ -88,16 +63,20 @@
     "\n",
     "decicion = np.empty_like(ubicacion)\n",
     "\n",
-    "#Creo el codigo de toma de deciciones de mi robor \n",
-    "if ubicacion[0]-1  < 0 and ubicacion[1]-1 < 0 and ubicacion[0]+1  < 5 and ubicacion[1]+1 < 5:\n",
+    "#Creo el codigo de toma de deciciones de mi robor\n",
+    "#todas las direcciones  \n",
+    "if ubicacion[0]-1  >= 0 and ubicacion[1]-1 >= 0 and ubicacion[0]+1  < 5 and ubicacion[1]+1 < 5:\n",
     "    #avanza hacia el este \n",
-    "    if flood_fill[ubicacion[0]] > flood_fill[0][ubicacion[0]][ubicacion[1]+1] and flood_fill[1][ubicacion[0]][ubicacion[1]+1] != 1 and flood_fill[1][ubicacion[0]][ubicacion[1]+1] < flood_fill[2][ubicacion[0]+1][ubicacion[1]] and flood_fill[1][ubicacion[0]][ubicacion[1]+1] < flood_fill[3][ubicacion[0]][ubicacion[1]-1] and flood_fill[1][ubicacion[0]][ubicacion[1]+1] < flood_fill[4][ubicacion[0]+1][ubicacion[1]]:\n",
-    "        ubicacion\n",
+    "    print(flood_fill[0][ubicacion[0]+1][ubicacion[1]])\n",
+    "    if flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]][ubicacion[1]+1] and flood_fill[1][ubicacion[0]][ubicacion[1]] != 1 and flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]-1][ubicacion[1]] and flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]][ubicacion[1]-1] and flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]+1][ubicacion[1]] or flood_fill[4][ubicacion[0]][ubicacion[1]] == 1 or flood_fill[2][ubicacion[0]][ubicacion[1]] == 1 or flood_fill[3][ubicacion[0]][ubicacion[1]] == 1:\n",
+    "        \n",
+    "        ubicacion[1]=ubicacion[1]+1\n",
+    "        print(flood_fill[0][ubicacion[0]][ubicacion[1]])\n",
     "\n",
     "\n",
-    "print(ubicacion)\n",
-    "print(flood_fill[0])\n",
-    "print(flood_fill[1:])"
+    "print(flood_fill[0][ubicacion[0]][ubicacion[1]])\n",
+    "#print(flood_fill[0])\n",
+    "#print(flood_fill[1:])"
    ]
   },
   {
